--- a/Northwood.UI/Themes/Generic.xaml
+++ b/Northwood.UI/Themes/Generic.xaml
@@ -1,5 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					xmlns:UI="clr-namespace:Northwood.UI"
 					xmlns:local="clr-namespace:Northwood.UI">
 
@@ -9,18 +9,22 @@
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type local:Diagram}">
 					<Border Name="Bd"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-					Padding="{TemplateBinding Padding}"
-                    SnapsToDevicePixels="true">
-						<ScrollViewer Padding="{TemplateBinding Padding}" 
+							BorderBrush="{TemplateBinding BorderBrush}"
+							BorderThickness="{TemplateBinding BorderThickness}"
+							Padding="{TemplateBinding Padding}"
+							SnapsToDevicePixels="true">
+						<ScrollViewer Name="scrollViewer" 
+									  Padding="{TemplateBinding Padding}" 
 									  HorizontalScrollBarVisibility="Auto"
 									  VerticalScrollBarVisibility="Auto" 
 									  Focusable="False">
-							<Border HorizontalAlignment="Center" VerticalAlignment="Center" BorderBrush="Gray" BorderThickness="2">
-								<Grid Name="content" Background="{TemplateBinding Background}">
-									<ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-								</Grid>
+							<Border  
+									Background="{TemplateBinding Background}"
+									HorizontalAlignment="Center" 
+									VerticalAlignment="Center" 
+									BorderBrush="LightGray" 
+									BorderThickness="2">
+								<ItemsPresenter Name="content" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
 							</Border>
 						</ScrollViewer>
 					</Border>
@@ -38,7 +42,7 @@
 		<Setter Property="ItemsPanel">
 			<Setter.Value>
 				<ItemsPanelTemplate>
-					<Canvas Width="1500" Height="1500" />
+					<Canvas Background="White" Width="1500" Height="1500" />
 				</ItemsPanelTemplate>
 			</Setter.Value>
 		</Setter>
@@ -50,11 +54,11 @@
 				<ControlTemplate TargetType="{x:Type local:DiagramItem}">
 					<Grid>
 						<Border Name="Bd" Focusable="True"
-                    Background="{TemplateBinding Background}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-					Padding="{TemplateBinding Padding}"
-                    SnapsToDevicePixels="True">
+								Background="{TemplateBinding Background}"
+								BorderBrush="{TemplateBinding BorderBrush}"
+								BorderThickness="{TemplateBinding BorderThickness}"
+								Padding="{TemplateBinding Padding}"
+								SnapsToDevicePixels="True">
 							<DockPanel LastChildFill="True">
 								<ItemsControl ItemTemplate="{TemplateBinding ItemTemplate}" 
 										  ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
@@ -90,11 +94,11 @@
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type local:DiagramItemPort}">
 					<Border Name="Bd"
-                    Background="{TemplateBinding Background}"
-                    BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-					Padding="{TemplateBinding Padding}"
-                    SnapsToDevicePixels="true">
+							Background="{TemplateBinding Background}"
+							BorderBrush="{TemplateBinding BorderBrush}"
+							BorderThickness="{TemplateBinding BorderThickness}"
+							Padding="{TemplateBinding Padding}"
+							SnapsToDevicePixels="true">
 						<DockPanel VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
 								   HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}">
 							<ContentPresenter Content="{TemplateBinding Header}" />
